# hse-python-backend

./: Dockerfile  Dockerfile_hw4  README.md  docker-compose.yml  docker-compose_hw4.yml  prometheus.yml  pyproject.toml
.github/workflows/: test.yml
hw_1/: README.md  app.py  requirements.txt
lecture_1/hw/: math_plain_asgi.py  maths.py
lecture_2/hw/: README.md
lecture_2/hw/shop_api/: main.py  schemas.py
lecture_4/: locustfile.py  requirements.txt
lecture_4/demo_service/api/: main.py
lecture_4/grafana/: grafana.db
lecture_4/settings/prometheus/: prometheus.yml
tests/: test_homework_1.py  test_homework_2.py
tests/lecture_4/: conftest.py
tests/lecture_4/hw/: test_demo_service_api.py
