[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["Vloods <lmvibe@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
pytest = "^8.3.3"
faker = "^30.1.0"
fastapi = "^0.115.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
