[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["Vloods <lmvibe@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
pytest = "^8.3.3"
faker = "^30.1.0"
fastapi = "^0.115.0"
requests = "^2.32.3"
httpx = "^0.27.2"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"
websocket = "^0.2.1"
websockets = "^13.1"
prometheus-fastapi-instrumentator = "^7.0.0"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
locust = "^2.32.0"
prometheus-client = "0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
